objects/LLC_BI__Schedule_Section__c.object
<CustomObject>
    <description>This object stores the column configuration data.</description>
    <fields>
        <fullName>LLC_BI__Debt_Schedule__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this required Lookup field to associate a Schedule Section to its Debt Schedule. By default, it displays the associated Debt Schedule.</description>
        <label>Debt Schedule</label>
        <referenceTo>LLC_BI__Debt_Schedule__c</referenceTo>
        <relationshipLabel>Schedule Sections</relationshipLabel>
        <relationshipName>Schedule_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dropdown_Items__c</fullName>
        <description>Admins manually populate this text field with the drop-down items the user selects in the schedule. Values must be separated by two vertical bar symbols. For example, value1||value2.</description>
        <label>Drop-down Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Formula__c</fullName>
        <description>The User populates this optional long text field to their desired FLEX formula. By default, it is blank.</description>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hide_Schedule_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admins select this optional checkbox to hide a schedule section in the Schedules UI. By default, it is unselected.</description>
        <label>Hide Schedule Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Restricted_Dropdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admins select this optional checkbox to remove the ability for users to manually enter unique values in the Picklist Values field. By default, it is unselected.</description>
        <label>Is Restricted Drop-down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order_Number__c</fullName>
        <description>The system automatically populates this required number field to its section order number, which dictates which order it shows up in. By default, it is populated with a number.</description>
        <label>Order Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Schedule_Entry__c</fullName>
        <description>The system automatically populates this required text field to associate a Schedule Section to a field on the Schedule Entry. By default, it is populated with its associated Schedule Entry Field API name.</description>
        <label>Schedule Entry</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Schedule__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this required Lookup field to associate a Schedule Section to its Schedule. By default, it displays the associated Schedule.</description>
        <label>Schedule</label>
        <referenceTo>LLC_BI__Schedule__c</referenceTo>
        <relationshipLabel>Schedule Sections</relationshipLabel>
        <relationshipName>Schedule_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Show_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this boolean field so that the total will show for this configured Section for the Schedule. By default, it is unselected.</description>
        <label>Show Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field with the ID of the Schedule Section it was cloned from. By default, it is blank.</description>
        <label>Source Section</label>
        <referenceTo>LLC_BI__Schedule_Section__c</referenceTo>
        <relationshipLabel>Cloned Sections</relationshipLabel>
        <relationshipName>Cloned_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this optional Lookup field to associate a Schedule Section to a Spread Statement Record so the Total of the section will populate the Record’s Record Values. By default, it is blank.</description>
        <label>Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Schedule Sections</relationshipLabel>
        <relationshipName>Schedule_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Schedule Section</label>
    <nameField>
        <displayFormat>SS-{000000000}</displayFormat>
        <label>Schedule Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>